# procjam-2024

godot/: PROCJAM2024.gdextension  box_shape.tres  capsule.tres  descriptions.json  dialogue.gd  dialogue.tscn  emissiv.tres  gold.tres  icon.svg.import  item.gd  lmp.tres  mai3A7E.tmp  mai7045.tmp  mai761.tmp  mai839A.tmp  mai8428.tmp  maiC6F5.tmp  maiE55D.tmp  main.tscn  menu.gd  menu.tscn  movement.gd  new_standard_material2_3d.tres  new_standard_material_3d.tres  node_3d.tscn  project.godot  shopkeeper.gd  sphere.tres  ui_main.tscn  wall.tres  wod.tres  wod2.tres
godot/audio/: after the dust has settled.mp3.import  curiouser and curiouser.mp3.import
godot/fonts/: Underdog-Regular.ttf.import
godot/objects/: drawer.obj.import  room.glb.import  room_Substance_graph_basecolor.png.import  room_Substance_graph_normal.png.import  room_Substance_graph_normal_2.png.import  room_Substance_graph_normal_5.png.import  room_Substance_graph_roughness.png.import  room_Substance_graph_roughness_7.png.import  room_room_Substance_graph_basecolor_3.png.import  room_room_Substance_graph_basecolor_6.png.import
godot/sprites/: belt.png.import  bracelet.png.import  cup1.png.import  hat.png.import  necklace.png.import  orb.png.import  shoes1.png.import  shoes2.png.import  shoes3.png.import  shopkeeper_1.png.import  shopkeeper_2.png.import  statue.png.import  sunglasses.png.import  teapot1.png.import  teapot2.png.import  teapot3.png.import  vase1.png.import  vase2.png.import  vase3.png.import
godot/ui/: bg.png.import  (+10 more)
rust/: Cargo.toml
rust/src/: godot.rs  lib.rs  world.rs
(+49 files in other folders)
