[package]
name = "procjam-2024"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8.5"
strfmt = "0.2.4"
serde_json = "1.0"
stringcase = "0.3.0"
serde = { version = "1.0.214", features = ["derive"] }
